feat: filtering of points

--- a/notebooks/00_exploration.ipynb
+++ b/notebooks/00_exploration.ipynb
@@ -108,7 +108,7 @@
     "DATA_DIR = Path('../backend/api/data')\n",
     "RAW_DATA = DATA_DIR / 'raw'\n",
     "PROCESSED_DATA = DATA_DIR / 'processed'\n",
-    "INFOBUSES = RAW_DATA / 'infobuses'\n",
+    "INFOBUSES = RAW_DATA / 'buses'\n",
     "\n",
     "df = dd.read_csv(INFOBUSES / '2018-05-01.gps.csv', sep=';') #meta = (str, str, str, float, float))\n",
     "df['id'] = df['patente'] + '---' + df['recorrido']\n",
