feat: avance en exploración de datos

--- a/notebooks/00_exploration_gps.ipynb
+++ b/notebooks/00_exploration_gps.ipynb
@@ -2,13 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div><strong>Dask DataFrame Structure:</strong></div>\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -78,7 +92,8 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<div>Dask Name: dropna, 9 expressions</div>"
+       "</div>\n",
+       "<div>Dask Name: dropna, 10 graph layers</div>"
       ],
       "text/plain": [
        "Dask DataFrame Structure:\n",
@@ -89,11 +104,10 @@
        "...                ...       ...      ...      ...      ...     ...\n",
        "                   ...       ...      ...      ...      ...     ...\n",
        "                   ...       ...      ...      ...      ...     ...\n",
-       "Dask Name: dropna, 9 expressions\n",
-       "Expr=DropnaFrame(frame=Replace(frame=Drop(frame=Assign(frame=ReadCSV(62ff111)), columns=['nose', 'nose1', 'nose2', 'nose3', 'nose4']), to_replace= , value=nan))"
+       "Dask Name: dropna, 10 graph layers"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,6 +129,149 @@
     "df = df.drop(columns=['nose', 'nose1', 'nose2', 'nose3','nose4']).replace(' ', np.nan).dropna()\n",
     "# df.compute()\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nombre de los recorridos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recorridos = df['recorrido'].unique()\n",
+    "\n",
+    "# .apply(lambda x: x[-1], meta=('recorrido', 'str')).compute().value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "todos los servicios\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "recorrido\n",
+       "T301    14\n",
+       "T428    12\n",
+       "F25      9\n",
+       "F13      7\n",
+       "T378     7\n",
+       "        ..\n",
+       "T441     1\n",
+       "T460     1\n",
+       "T4TS     1\n",
+       "T522     1\n",
+       "T523     1\n",
+       "Name: count, Length: 311, dtype: int64[pyarrow]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "servicios = recorridos.apply(lambda x: x.split(' ')[0], meta=('recorrido', 'str')).value_counts().compute()\n",
+    "print('todos los servicios')\n",
+    "servicios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sentidos del recorrido\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "recorrido\n",
+       "I    454\n",
+       "R    446\n",
+       "Name: count, dtype: int64[pyarrow]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentidos = recorridos.apply(lambda x: x[-1], meta=('recorrido', 'str')).value_counts().compute()\n",
+    "print('sentidos del recorrido')\n",
+    "sentidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "posibles variaciones\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "recorrido\n",
+       "00I    351\n",
+       "00R    342\n",
+       "03R     38\n",
+       "06I     35\n",
+       "03I     34\n",
+       "06R     34\n",
+       "07I     11\n",
+       "02R     10\n",
+       "01I      8\n",
+       "02I      7\n",
+       "01R      5\n",
+       "07R      5\n",
+       "04R      3\n",
+       "05I      3\n",
+       "05R      3\n",
+       "08R      3\n",
+       "09I      2\n",
+       "10R      2\n",
+       "04I      1\n",
+       "08I      1\n",
+       "09R      1\n",
+       "10I      1\n",
+       "Name: count, dtype: int64[pyarrow]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variaciones = recorridos.apply(lambda x: x.split(' ')[-1], meta=('recorrido', 'str')).value_counts().compute()\n",
+    "print('posibles variaciones')\n",
+    "variaciones"
    ]
   },
   {
@@ -552,6 +709,13 @@
    "source": [
     "print(\"El recorrido más común es {} con {} viajes distintos\".format(rides_per_service.idxmax(), rides_per_service[rides_per_service.idxmax()]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -570,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
