--- a/notebooks/00_exploration_gps.ipynb
+++ b/notebooks/00_exploration_gps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<div>Dask Name: reset_index, 10 expressions</div>"
+       "<div>Dask Name: assign, 9 expressions</div>"
       ],
       "text/plain": [
        "Dask DataFrame Structure:\n",
@@ -89,11 +89,11 @@
        "...                ...       ...             ...      ...      ...     ...\n",
        "                   ...       ...             ...      ...      ...     ...\n",
        "                   ...       ...             ...      ...      ...     ...\n",
-       "Dask Name: reset_index, 10 expressions\n",
-       "Expr=ResetIndex(frame=DropnaFrame(frame=Replace(frame=Drop(frame=Assign(frame=ReadCSV(9e25a02)), columns=['nose', 'nose1', 'nose2', 'nose3', 'nose4']), to_replace= , value=nan)), drop=True)"
+       "Dask Name: assign, 9 expressions\n",
+       "Expr=Assign(frame=DropnaFrame(frame=Replace(frame=ReadCSV(9e25a02)[Index(['patente', 'recorrido', 'datetime', 'lat', 'lon'], dtype='object')], to_replace= , value=nan)))"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,8 +114,8 @@
     "INFOBUSES = RAW_DATA / 'buses'\n",
     "\n",
     "df = dd.read_csv(INFOBUSES / '2018-05-01.gps.csv', parse_dates=['datetime'], sep=';') #meta = (str, str, str, float, float))\n",
+    "df = df[df.columns.intersection(['patente', 'recorrido', 'datetime', 'lat', 'lon'])].replace(' ', np.nan).dropna()\n",
     "df['id'] = df['patente'] + '---' + df['recorrido']\n",
-    "df = df.drop(columns=['nose', 'nose1', 'nose2', 'nose3','nose4']).replace(' ', np.nan).dropna().reset_index(drop=True)\n",
     "# df.compute()\n",
     "df"
    ]
